<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/cardBackground"
    android:layout_marginTop="@dimen/item_general_margin_xxsmall"
    android:layout_marginBottom="@dimen/item_general_margin_xxsmall"
    >

    <TextView
        android:id="@+id/text_job_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/job_item_title_job"
        android:layout_marginTop="@dimen/item_general_margin"
        android:layout_marginBottom="@dimen/item_general_margin"
        android:layout_marginStart="@dimen/item_general_margin"
        android:layout_marginEnd="@dimen/item_general_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/style_headline_7"
        />

    <TextView
        android:id="@+id/text_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_general_margin_small"
        android:layout_marginStart="@dimen/item_general_margin"
        android:layout_marginEnd="@dimen/item_general_margin"
        tools:text="@string/job_item_company_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_job_title"
        style="@style/style_caption"

        />

    <TextView
        android:id="@+id/text_job_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/job_item_job_description"
        android:layout_marginTop="@dimen/item_general_margin_big"
        android:layout_marginBottom="@dimen/item_general_margin"
        android:layout_marginStart="@dimen/item_general_margin"
        android:layout_marginEnd="@dimen/item_general_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_company_name"
        style="@style/style_body_2"
        />
</androidx.constraintlayout.widget.ConstraintLayout>